# slsd_gju

./: .gitignore  .mcp.json  CLAUDE.md  README.md  login.py  main.py  pingjiao.py  pingjiao_demo.py  pingjiao_main.py  pyproject.toml  requirements.txt  setup.py  sso_login_demo.py  xuanke.py  xuanke_browser.py  xuanke_demo.py  抢课curl  查询curl  课程demo.py  退课curl
pingjiao/: __init__.py
sso/: __init__.py  browser.py  captcha.py  crypto.py  portal.py
xuanke/: __init__.py
xuexitong/: __init__.py
