[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slsd-pingjiao"
version = "1.0.0"
description = "湖南水利水电职业技术学院自动评教脚本"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "requests",
    "beautifulsoup4",
    "pycryptodome",
    "ddddocr",
]

[project.scripts]
pingjiao = "pingjiao:main"
sso-login = "login:main"
